--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div id="quizContent"></div>
       <div class="info-box">
         <div style="flex: 1;">
-          <p>Fill out all the information. Take a screenshot (pantallazo).</p>
+          <p>1. Fill out all the information. 2. Take a screenshot.</p>
           <p>Show it or send it to your teacher (if requested).</p>		
         </div>        
         <!-- Data Entry Student Fields -->
@@ -73,6 +73,8 @@
             <!-- Camera feed will be inserted here -->
           </div>
         </div>
+		
+		
         <label for="school" style="color: darkblue; font-weight: bold;">* School:</label>
         <input type="text" id="school" name="school" size="40"><br>
         <label for="group" style="color: darkblue; font-weight: bold;">* Group:</label>
