--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Readings by Jony Rojas et al.</title>
+  <title>By Jony R. et al.</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -58,20 +58,29 @@
       <h3><span style="color: darkred;">TAKE A QUIZ</span></h3>
       <p><em>Let's see how much you learned in this activity...</em></p>
       <div id="quizContent"></div>
-      <div class="info-box">
+        <div class="info-box">
         <div style="flex: 1;">
-          <p>1. Fill out all the information. 2. Take a screenshot.</p>
-          <p>Show it or send it to your teacher (if requested).</p>		
-        </div>        
+          <p>1. Smile! 2. Fill information out. 3. Take a Screenshot. 4. Send/Show to your teacher</p>
+                 <div id="cameraBox" 
+					style="width: 150px; 
+					height: 150px; 
+					border: 2px solid darkblue; 
+					margin: 0 auto; 
+					display: flex; 
+					justify-content: center; 
+					align-items: center; 
+					overflow: hidden;
+					box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);">  <!-- Added shadow -->
+					<!-- Camera feed will be inserted here -->
+				</div>  
+		  </div>      
         <!-- Data Entry Student Fields -->
         <div style="display: flex; align-items: center;">		  
           <div style="flex: 1;">
             <label for="readingTitle" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
             <input type="text" id="readingTitle" name="readingTitle" size="40">
           </div>
-          <div id="cameraBox" style="width: 150px; height: 150px; border: 2px solid darkblue; margin-left: 20px; display: flex; justify-content: center; align-items: center; overflow: hidden;">
-            <!-- Camera feed will be inserted here -->
-          </div>
+
         </div>
 		
 		
