--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
         <input type="text" id="name" name="name" size="40"><br><br>
         
 		<!-- Buttons -->
-        <button id="scoreButton">My Score</button>
-        <button id="clearButton">Clear</button>
-		<button id="screenshotButton">Screenshot</button>
-		
+		<div class="button-row">
+		  <button id="scoreButton">My Score</button>
+		  <button id="clearButton">Clear</button>
+		  <button id="screenshotButton">Screenshot</button>
+		</div>	
 		
 		
         <p id="scoreFeedback"></p>
