--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <p id="timestamp"></p>
       </div>
       <div style="text-align: center; color: darkblue; font-size: 10px;">
-        Developers: Jony Rojas & Felipe Molina /IT Support: Juan Pablo Gaviria
+        Developers: Jony Rojas & Felipe Molina /IT Support: Juan P. Gaviria / QA: Isabel Jimenez
       </div>
     </div>
   </div>
