--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     
     <!-- Image Section -->
-    <div id="imageSection">
-      <iframe id="imageFrame" src="" frameborder="0"></iframe>
-    </div>
+	<div id="imageSection">
+	  <img id="imageDisplay" src="" alt="Reading visual" class="responsive-image">
+	</div>
 
   <audio id="audioPlayer" controls>
     <source id="audioSource" src="" type="audio/mpeg">
