--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="selector">
       <label for="gradeSelect">Select Grade:</label>
       <select id="gradeSelect">
-        <option value="6">6° Grade</option>
+        <option value="6" selected>6° Grade</option> <!-- Default -->
         <option value="7">7° Grade</option>
         <option value="8">8° Grade</option>
         <option value="9">9° Grade</option>
