--- a/index - before game.html
+++ b/index - before game.html
@@ -11,12 +11,12 @@
   <div class="container">
     <!-- Week Selection -->
     <div class="selector">
-      <label for="weekSelect" style="color: #2b6cb0;">*Select Week:</label>
+      <label for="weekSelect">*Select Week:</label>
       <select id="weekSelect"></select>
 
     <!-- Grade Selection -->
     <div class="selector">
-      <label for="gradeSelect" style="color: #2b6cb0;">Select Grade:</label>
+      <label for="gradeSelect">Select Grade:</label>
       <select id="gradeSelect">
         <option value="6" selected>6° Grade</option> <!-- Default -->
         <option value="7">7° Grade</option>
@@ -51,13 +51,6 @@
       <p>Make sure to review this "key vocabulary". Remember, "Practice Makes Perfect!"</p>
       <div id="vocabularyContent"></div>
     </div>
-	
-	
-	<!-- The new activity Section for the game -->
-	<button id="readingGameButton" style="display: block; margin: 0 auto;">Practice Vocabulary</button>
-	<p>*Make sure to use "undercores (_)e.g. for compound words: school_brake. (Conectar palabras compuestas con guión bajos "_")</p>
-	<div id="readingGameContainer" style="display: none; margin: 20px auto 0 auto; text-align: center;"></div>
-	
   </div>
 
   <!-- Quiz Section -->
@@ -85,18 +78,18 @@
         <!-- Data Entry Student Fields -->
         <div style="display: flex; align-items: center;">		  
           <div style="flex: 1;">
-            <label for="readingTitle" style="color: #2b6cb0; font-weight: bold;">* Reading Title:</label>
+            <label for="readingTitle" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
             <input type="text" id="readingTitle" name="readingTitle" size="40">
           </div>
 
         </div>
 		
 		
-        <label for="school" style="color: #2b6cb0; font-weight: bold;">* School:</label>
+        <label for="school" style="color: darkblue; font-weight: bold;">* School:</label>
         <input type="text" id="school" name="school" size="40"><br>
-        <label for="group" style="color: #2b6cb0; font-weight: bold;">* Group:</label>
+        <label for="group" style="color: darkblue; font-weight: bold;">* Group:</label>
         <input type="text" id="group" name="group" size="40"><br>
-        <label for="name" style="color: #2b6cb0; font-weight: bold;">* Full Name:</label>
+        <label for="name" style="color: darkblue; font-weight: bold;">* Full Name:</label>
         <input type="text" id="name" name="name" size="40"><br><br>
         
 		<!-- Buttons -->
