--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
   <div class="container">
     <div id="vocabularySection">
       <h3><span style="color: darkred;">VOCABULARY REVIEW</span></h3>
-      <p>Make sure to review this "key vocabulary". Remember, "Practice Makes Perfect!"</p>
+      <p>Make sure to review this "key vocabulary" one more time. Remember: "Practice Makes Perfect!"</p>
       <div id="vocabularyContent"></div>
     </div>
 	
 	
 	<!-- The new activity Section for the game -->
-	<button id="readingGameButton" style="display: block; margin: 0 auto;">Practice Vocabulary</button>
-	<p>*Make sure to use "undercores (_)e.g. for compound words: school_brake. (Conectar palabras compuestas con guión bajos "_")</p>
+	<h4 style="text-align: center;"><span style="color: darkred;">LET US PRACTICE THE VOCABULARY NOW...</span></h4>
+	<button id="readingGameButton" style="display: block; margin: 0 auto;">Drag and Drop Activity</button>	
 	<div id="readingGameContainer" style="display: none; margin: 20px auto 0 auto; text-align: center;"></div>
 	
   </div>
