--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
       <h3><span style="color: darkred;">VOCABULARY REVIEW</span></h3>
       <p>Make sure to review this "key vocabulary" one more time. Remember: "Practice Makes Perfect!"</p>
       <div id="vocabularyContent"></div>
-    </div>
-	
+    </div>	
 	
 	<!-- The new activity Section for the game -->
-	<h4 style="text-align: center;"><span style="color: darkred;">LET US PRACTICE THE VOCABULARY NOW...</span></h4>
+	<h4><span style="color: darkred;">LET US PRACTICE THE VOCABULARY NOW...</span></h4>
 	<button id="readingGameButton" style="display: block; margin: 0 auto;">Drag and Drop Activity</button>	
 	<div id="readingGameContainer" style="display: none; margin: 20px auto 0 auto; text-align: center;"></div>
-	
+
   </div>
 
   <!-- Quiz Section -->
