--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <div>
         <label for="gradeSelect" style="color: #2b6cb0;">Select Grade/Level:</label>
         <select id="gradeSelect">
-          <option value="6" selected>6° Grade</option>
-          <option value="7">7° Grade</option>
-          <option value="8">8° Grade</option>
-          <option value="9">9° Grade</option>
-          <option value="10">10° Grade</option>
-          <option value="11">11° Grade</option>
+          <option value="6" selected>6° Grade / A1 Beginner</option>
+          <option value="7">7° Grade / A1 Advanced</option>
+          <option value="8">8° Grade / A2 Beginner</option>
+          <option value="9">9° Grade / A2 Advanced</option>
+          <option value="10">10° Grade / B1 Beginner</option>
+          <option value="11">11° Grade / B1+</option>
         </select>
       </div>
     </div>
