--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1,
+ user-scalable=no">
+ <meta name="google" content="notranslate">
+ <meta name="robots" content="noimageindex">
   <title>By Jony R. et al.</title>
   <link rel="stylesheet" href="style.css">
 </head>
