--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </script>
 </head>
 <body translate="no" oncopy="return false" oncut="return false" onpaste="return false" onselectstart="return false">
+<p style="text-align: center; color: #8B0000;">Recomendación: Usar Google Chrome Solamante!</p>
 <div class="container">
   <div style="display: flex; justify-content: space-between; align-items: flex-start;">
     <div class="selector">
