updated audio player

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <div id="vocabularyContent"></div>
   </div>
 
-  <h4><span style="color: darkred;">LET US PRACTICE THE VOCABULARY NOW...</span></h4>
+  <h4 style="text-align: center;">
+  <span style="color: darkred;">PRACTICE ACTIVITY ONLY! (To reset, just close and start again!)</span>
+</h4>
   <button id="readingGameButton" style="display: block; margin: 0 auto;">Drag and Drop Activity</button>
   <div id="readingGameContainer" style="display: none; margin: 20px auto 0 auto; text-align: center;"></div>
 </div>
